--- a/style.css
+++ b/style.css
@@ -85,12 +85,15 @@ button {
     border-radius: 8px;
     text-align: right;
     padding: 4px 18px;
-    font-size: 32px;
-    
+    font-size: 16px;
+    min-height: 80px;
     flex-grow: 1 1 0;
+    display: flex;
+    flex-direction: column;
 }
 
 .screen p {
+    min-height: 40px;
     margin: 2px;
     text-align: right;
 }
