Adjust background colors

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    background-color: #202124;
+    background-color: #6a6a6c;
     color: #e8eaed;
     font-family:Arial, Helvetica, sans-serif;
     height: 90vh;
@@ -32,7 +32,9 @@ main .center {
     flex-shrink: 0;
     flex-grow: 0;
     min-height: 60vh;
-    max-width: 20vw;
+    /* max-width: 20vw; */
+    background-color: #202124;
+    border-radius: 8px;
 }
 
 main .center .calculator {
