--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 header {
     font-size: 32px;
     flex: 1;
-    margin-left: 42px;
+    /* margin-left: 42px; */
     text-align: center;
 }
 main {
