--- a/style.css
+++ b/style.css
@@ -77,6 +77,14 @@ button {
     padding: 4px 10px 4px;
 }
 
+.row1 button:hover {
+    background-color: #555454;
+}
+
+.row1 button:active {
+    box-shadow: -2px -2px #9f9f9f;
+}
+
 .row2 button, .row3 button, .row4 button, .row5 button {
     background-color: #313131;
     color: white;
@@ -91,6 +99,10 @@ button {
     padding: 4px 10px 4px;
 }
 
+#column4:hover {
+    background-color: #f8c675;
+}
+
 .decimal {
     flex: 1 0;
     min-width: 42px;
@@ -101,7 +113,7 @@ button {
     border-radius: 8px;
     text-align: right;
     padding: 4px 18px;
-    font-size: 16px;
+    font-size: 20px;
     min-height: 80px;
     flex-grow: 1 1 0;
     display: flex;
@@ -115,6 +127,10 @@ button {
     text-align: right;
 }
 
+.screen .bottom {
+    font-size: 32px;
+}
+
 #zero {
     max-width: 42px;
 }
@@ -126,4 +142,21 @@ button {
     color: white;
     border-radius: 2.5rem;
 }
+
+#equals:hover {
+    background-color: #f8c675;
+}
+
+#equals:active {
+    box-shadow: -2px -2px #f69906;
+}
+
+.operand:hover {
+    background-color: #404040;
+}
+
+.operand:active {
+    box-shadow: -2px -2px #515050;
+}
+
 
